// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Reader class > Reader isRecursive:false 1`] = `
{
  "data": [
    {
      "data": "text
",
      "ext": "txt",
      "fileName": "test-file.txt",
      "name": "test-file",
      "path": "src\\\\test\\\\mock\\\\folder\\\\test-file.txt",
      "pathDir": "src/test/mock/folder",
      "type": "file",
    },
    {
      "data": [],
      "ext": "",
      "name": "test-folder",
      "path": "src\\\\test\\\\mock\\\\folder\\\\test-folder",
      "type": "folder",
    },
  ],
  "ext": "",
  "name": "folder",
  "path": "./src/test/mock/folder",
  "type": "folder",
}
`;

exports[`Reader class > Reader isRecursive:false path:'./src/test/' 1`] = `
{
  "data": [
    {
      "data": "text
",
      "ext": "txt",
      "fileName": "test-file.txt",
      "name": "test-file",
      "path": "src\\\\test\\\\mock\\\\folder\\\\test-file.txt",
      "pathDir": "src/test/mock/folder",
      "type": "file",
    },
    {
      "data": [],
      "ext": "",
      "name": "test-folder",
      "path": "src\\\\test\\\\mock\\\\folder\\\\test-folder",
      "type": "folder",
    },
  ],
  "ext": "",
  "name": "folder",
  "path": "src\\\\test\\\\mock\\\\folder",
  "type": "folder",
}
`;

exports[`Reader class > Reader isRecursive:true 1`] = `
{
  "data": [
    {
      "data": "text
",
      "ext": "txt",
      "fileName": "test-file.txt",
      "name": "test-file",
      "path": "src\\\\test\\\\mock\\\\folder\\\\test-file.txt",
      "pathDir": "src/test/mock/folder",
      "type": "file",
    },
    {
      "data": [
        {
          "data": "inherit.txt
",
          "ext": "txt",
          "fileName": "inherit.txt",
          "name": "inherit",
          "path": "src\\\\test\\\\mock\\\\folder\\\\test-folder\\\\inherit.txt",
          "pathDir": "src/test/mock/folder/test-folder",
          "type": "file",
        },
      ],
      "ext": "",
      "name": "test-folder",
      "path": "src\\\\test\\\\mock\\\\folder\\\\test-folder",
      "type": "folder",
    },
  ],
  "ext": "",
  "name": "folder",
  "path": "./src/test/mock/folder",
  "type": "folder",
}
`;
